--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react-draggable": "^1.3.1"
+    "react-draggable": "sytac/react-draggable"
   },
   "peerDependencies": {
     "react": "^0.14.7",
